Fixed issue with navbar-fixed-top overlap
Added padding-top to body equal to the height of the navbar. Added media
query for no change when below mobile breakpoint.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,16 @@ html {
 }
 
 body {
-  margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+  padding-top: 40px; /* Required for navbar-fixed-top */
   /* Below styles required for fullscreen background gradient */
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+@media screen and (max-width: 768px) {
+  body { padding-top: 0px; }
 }
 
 /* Page background */
